update/fix Mapper result

--- a/Version3/Car.ipynb
+++ b/Version3/Car.ipynb
@@ -36,6 +36,7 @@
     "from utils.models import *\n",
     "from utils.utils_v3 import *\n",
     "from utils.plots import *\n",
+    "from utils.preprocess import preprocess, process_other, get_unique_ids\n",
     "\n",
     "try:\n",
     "    myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,190 +82,38 @@
     "    '肇因研判大類別名稱-主要',\n",
     "    # '肇因研判大類別名稱-個別',\n",
     "    \n",
-    "    # 顯著特徵\n",
     "    '道路型態子類別名稱'\n",
-    "]\n",
-    "# select_lst = dataA1.columns\n",
-    "\n",
-    "def preprocess(input_data, select_lst):\n",
-    "    # 篩選到第一個順位，因為注重的是單次事故的情況\n",
-    "    main_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
-    "    sample_data = main_data[main_data['發生月份'] < 11]\n",
-    "    selected_data = sample_data[select_lst]\n",
-    "    \n",
-    "    # 將資料分出死亡和受傷，合併到原本的資料後去除多餘的死亡受傷人數\n",
-    "    split_death_injury_data = split_death_injury(selected_data['死亡受傷人數'])\n",
-    "    full_data = pd.concat([selected_data, split_death_injury_data], axis=1)\n",
-    "\n",
-    "    # 補齊缺失值\n",
-    "    full_data[select_lst] = full_data[select_lst].fillna('未紀錄')\n",
-    "\n",
-    "    # 速限範圍\n",
-    "    full_data = full_data[(full_data['速限-第1當事者'] < 200) &\n",
-    "                      (full_data['當事者事故發生時年齡'] < 100) &\n",
-    "                      (full_data['當事者事故發生時年齡'] > 0)]\n",
-    "\n",
-    "    full_data.drop(columns=['死亡受傷人數'], inplace=True)\n",
-    "    \n",
-    "    # 篩選駕駛人的資料\n",
-    "    full_data = full_data[full_data['當事者行動狀態大類別名稱'] == '車的狀態']\n",
-    "    full_data.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
-    "    # 篩選離群資料(影響MCA的因子得分)\n",
-    "    full_data = full_data[(full_data['肇因研判大類別名稱-主要'] != '非駕駛者') &\n",
-    "                  (full_data['肇因研判大類別名稱-主要'] != '無(非車輛駕駛人因素)') &\n",
-    "                  (full_data['肇因研判大類別名稱-主要'] != '無(車輛駕駛者因素)') &\n",
-    "                  (full_data['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄') &\n",
-    "                    (full_data['車輛撞擊部位大類別名稱-最初'] != '未紀錄')]\n",
-    "\n",
-    "    return full_data\n",
-    "\n",
-    "full_dataA1 = preprocess(dataA1, select_lst)\n",
-    "full_dataA2 = preprocess(dataA2, select_lst)"
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44 10057\n",
-      "45 10286\n",
-      "40 9143\n",
-      "35 8000\n",
-      "36 8229\n",
-      "39 8914\n",
-      "47 10743\n",
-      "43 9829\n",
-      "40 9143\n",
-      "47 10743\n",
-      "dummy_data: (95503, 158)\n"
+      "46 10354\n",
+      "48 10804\n",
+      "40 9003\n",
+      "35 7878\n",
+      "36 8103\n",
+      "40 9003\n",
+      "48 10804\n",
+      "43 9679\n",
+      "40 9003\n",
+      "48 10804\n",
+      "[]\n",
+      "dummy_data: (95859, 160)\n"
      ]
     }
    ],
    "source": [
-    "# 下採樣資料，專用在ForMatrix檔案\n",
-    "sampling_ratio = 0.33  # 下採樣比例，根據A1 和 A2 原始數據量比例調整\n",
-    "total_ratio = len(full_dataA1) / len(full_dataA2) # 保留 A1/A2 的比例\n",
-    "downsampled_A1, downsampled_A2 = downsample_by_month_simple(full_dataA1, full_dataA2, sampling_ratio, total_ratio)\n",
-    "\n",
-    "# Concat\n",
-    "rbind_data = pd.concat([downsampled_A1, downsampled_A2], axis=0, ignore_index=True)\n",
-    "rbind_data.drop(columns=['發生月份'], inplace=True)\n",
-    "# 處理年齡和速限\n",
-    "rbind_data = process_age_speed(rbind_data)\n",
-    "death = rbind_data['死亡']\n",
-    "rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
-    "# 唯一值處理\n",
-    "columns_to_drop = []\n",
-    "for column in rbind_data.columns:\n",
-    "    if rbind_data[column].nunique() == 1:  # 檢查唯一值數量是否等於 1\n",
-    "        columns_to_drop.append(column)\n",
-    "rbind_data.drop(columns=columns_to_drop, inplace=True)\n",
-    "# Dummy\n",
-    "rbind_data[\"速限-第1當事者\"] = rbind_data[\"速限-第1當事者\"].astype(str)\n",
-    "dummy_data = pd.get_dummies(rbind_data)\n",
-    "print('dummy_data:', dummy_data.shape)\n",
-    "mapper_numpy = dummy_data.to_numpy()\n",
-    "\n",
-    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "篩選掉未紀錄資料以及分類人的狀態以及車的狀態"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Kmode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from kmodes.kmodes import KModes\n",
-    "\n",
-    "data_for_kmode = rbind_data.drop(['死亡', '受傷', 'color_for_plot'], axis=1)\n",
-    "\n",
-    "cost = []\n",
-    "all_results = {}\n",
-    "K = range(1, 5)\n",
-    "\n",
-    "for k in K:\n",
-    "\n",
-    "    km = KModes(\n",
-    "    n_clusters=k, \n",
-    "    init='Huang',\n",
-    "    verbose=1,\n",
-    "    random_state=42,\n",
-    "    n_jobs=10\n",
-    "    )\n",
-    "\n",
-    "    labels = km.fit_predict(data_for_kmode)\n",
-    "    cost.append(km.cost_)\n",
-    "    all_results[k] = {\n",
-    "        'cost': km.cost_,\n",
-    "        'labels': labels,\n",
-    "        'centroids': km.cluster_centroids_\n",
-    "    }\n",
-    "\n",
-    "optimal_k = K[cost.index(min(cost))]\n",
-    "optimal_result = all_results[optimal_k]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with open('Version3/Data/CarData/kmode_result.pickle', 'wb') as f:\n",
-    "#     pickle.dump(all_results, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8, 5))\n",
-    "plt.plot(K, cost, marker='o')\n",
-    "plt.xlabel('Number of Clusters (k)')\n",
-    "plt.ylabel('Cost')\n",
-    "plt.title('Elbow Method for Optimal k')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1    48690\n",
-      "0    46813\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pd.Series(all_results[2]['labels']).value_counts())\n",
-    "rbind_data['Cluster'] = all_results[2]['labels']"
+    "full_dataA1 = preprocess(dataA1, target='駕駛', lst=select_lst)\n",
+    "full_dataA2 = preprocess(dataA2, target='駕駛', lst=select_lst)\n",
+    "mapper_numpy, rbind_data, dummy_data, death = process_other(full_dataA1, full_dataA2, downsample=0.33)"
    ]
   },
   {
@@ -287,7 +136,6 @@
     "    copy=True,\n",
     "    check_input=True,\n",
     "    random_state=42\n",
-    "    # random_state=43\n",
     ")\n",
     "\n",
     "mca.fit(dummy_data)\n",
@@ -311,6 +159,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_mca(mca, dummy_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -330,17 +187,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_mca(mca, dummy_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "overlap = 2\n",
-    "interval = 11\n",
+    "interval = 10\n",
     "detailed_results = []\n",
     "silhouette_for_intervals = []\n",
     "\n",
@@ -379,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,20 +252,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['天候名稱', '光線名稱', '道路類別-第1當事者-名稱', '速限-第1當事者', '路面狀況-路面鋪裝名稱',\n",
+       "       '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱', '道路障礙-視距品質名稱', '道路障礙-視距名稱',\n",
+       "       '號誌-號誌種類名稱', '號誌-號誌動作名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
+       "       '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱', '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
+       "       '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', '肇事逃逸類別名稱-是否肇逃', '道路型態大類別名稱',\n",
+       "       '事故位置大類別名稱', '車道劃分設施-分向設施大類別名稱', '事故類型及型態大類別名稱', '當事者區分-類別-大類別名稱-車種',\n",
+       "       '當事者行動狀態大類別名稱', '車輛撞擊部位大類別名稱-最初', '車輛撞擊部位大類別名稱-其他', '肇因研判大類別名稱-主要',\n",
+       "       'color_for_plot'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rbind_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "駕駛者    80326\n",
+       "其他     14686\n",
+       "機件       336\n",
+       "燈光       257\n",
+       "裝載       254\n",
+       "Name: 肇因研判大類別名稱-主要, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rbind_data['肇因研判大類別名稱-主要'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '顯著特徵'\n",
+    "choose = '天候名稱'\n",
     "\n",
-    "for i in [87]:\n",
+    "for i in [35]:\n",
     "    print(f'Seed: {i}')\n",
-    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'], rbind_data, seed=i, iterations=150, dim=3,\n",
-    "                                   range_lst=[-0.075, 0.075, 0.075, -0.075])\n",
+    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100, dim=3,\n",
+    "                                   range_lst=[-0.1, 0.1, 0.1, -0.1])\n",
     "    mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
     "    full_info = mapper_plotter.extract_data()\n",
-    "    full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], 70)\n",
-    "    mapper_plotter.map_colors(choose, size=15, threshold=1000)\n",
+    "    full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], -40)\n",
+    "    mapper_plotter.map_colors(choose, size=15, threshold=5)\n",
     "    mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
    ]
   },
@@ -430,13 +331,12 @@
     "choose = '死亡'\n",
     "rbind_data['死亡'] = death\n",
     "\n",
-    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'], rbind_data, seed=87, iterations=150, dim=3,\n",
-    "                                range_lst=[-0.06, 0.05, 0.075, -0.075])\n",
+    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=35, iterations=100, dim=3,\n",
+    "                                range_lst=[-0.075, 0.075, 0.06, -0.1])\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
-    "full_info = mapper_plotter.extract_data()\n",
-    "full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], 70)\n",
-    "mapper_plotter.map_colors(choose, size=15, threshold=1000)\n",
-    "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.025, 0.02])"
+    "full_info = mapper_plotter.extract_data(rz=-40)\n",
+    "mapper_plotter.map_colors(choose, size=15, threshold=5)\n",
+    "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.025, 0.025])"
    ]
   },
   {
@@ -445,19 +345,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lst = ['Cluster', '車輛撞擊部位大類別名稱-最初', '當事者事故發生時年齡', '顯著特徵']\n",
+    "choose = '顯著特徵'\n",
+    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
     "\n",
-    "for choose in lst:\n",
-    "    try:\n",
-    "        mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'], rbind_data, seed=87, iterations=150)\n",
-    "        mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "        full_info = mapper_plotter.extract_data()\n",
-    "        mapper_plotter.map_colors(choose, size=15, threshold=700, range_lst=[-0.2, 0.1, 0.2, -0.2])\n",
-    "        mapper_plotter.plot(choose, avg=False, set_label=True, size=100000,\n",
-    "                save_path=f\"/Users/wangqiqian/Desktop/TrafficTDApython/Version3/GridSearch/MapperColor/Car/o2_i11_{choose}.png\")\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        continue"
+    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=35, iterations=100, dim=3,\n",
+    "                                range_lst=[-0.075, 0.075, 0.06, -0.1])\n",
+    "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
+    "full_info = mapper_plotter.extract_data(rz=-40)\n",
+    "mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
    ]
   },
   {
@@ -475,10 +371,10 @@
    "source": [
     "from shapely.geometry import Point, Polygon\n",
     "\n",
-    "rectangle1 = Polygon([(-0.0025, -0.075), (-0.06, -0.075), (-0.06, 0.02), (-0.0025, 0.02)])\n",
-    "rectangle2 = Polygon([(-0.0025, -0.075), (-0.0025, 0.065), (0.05, 0.065), (0.05, -0.075)])\n",
+    "rectangle1 = Polygon([(-0.0069, -0.06), (-0.075, -0.06), (-0.075, 0.04), (-0.0069, 0.04)])\n",
+    "rectangle2 = Polygon([(-0.0069, -0.06), (-0.0069, 0.065), (0.07, 0.065), (0.07, -0.06)])\n",
     "\n",
-    "filtered_full_info = full_info[(full_info['y'] > -0.2) &\n",
+    "filtered_full_info = full_info[(full_info['y'] > -0.15) &\n",
     "                               (full_info['y'] < 0.1) &\n",
     "                               (full_info['x'] > -0.1) &\n",
     "                               (full_info['x'] < 0.15)]\n",
@@ -534,15 +430,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "95503\n",
-      "95503\n"
+      "95859\n",
+      "95859\n"
      ]
     }
    ],
@@ -589,29 +485,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    33603\n",
-      "1      130\n",
+      "0    33625\n",
+      "1      137\n",
       "2        3\n",
       "3        1\n",
       "Name: 死亡, dtype: int64\n",
-      "0    56909\n",
-      "1      231\n",
-      "2        2\n",
+      "0    57202\n",
+      "1      218\n",
+      "2        3\n",
       "Name: 死亡, dtype: int64\n",
-      "0    4091\n",
-      "1      40\n",
-      "2       4\n",
+      "0    3961\n",
+      "1      47\n",
+      "2       3\n",
       "3       2\n",
       "Name: 死亡, dtype: int64\n",
-      "0    484\n",
-      "1      3\n",
+      "0    647\n",
+      "1     10\n",
       "Name: 死亡, dtype: int64\n"
      ]
     }
@@ -625,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
