--- a/Version3/Pass.ipynb
+++ b/Version3/Pass.ipynb
@@ -39,6 +39,7 @@
     "from utils.models import *\n",
     "from utils.utils_v3 import *\n",
     "from utils.plots import *\n",
+    "from utils.preprocess import preprocess, process_other, get_unique_ids\n",
     "\n",
     "try:\n",
     "    myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
@@ -54,33 +55,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 納入資料\n",
-    "- 篩選每個月2萬筆：發生月份<br/>\n",
-    "- 大類別資料：道路型態大類別名稱、事故位置大類別名稱、車道劃分設施-分向設施大類別名稱、事故類型及型態大類別名稱、當事者區分-類別-大類別名稱-車種、當事者行動狀態大類別名稱<br/>\n",
-    "## 不納入資料\n",
-    "- 車輛撞擊部位大類別名稱-最初：屬性只有一種<br/>\n",
-    "- 肇因研判大類別名稱-個別: 他和肇因研判大類別名稱-主要幾乎一模一樣<br/>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3096, 126)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "select_lst = [\n",
+    "    # 月份是為了篩選每個月2萬筆\n",
     "    '發生月份',\n",
+    "\n",
     "    '天候名稱', '光線名稱', \n",
     "    '道路類別-第1當事者-名稱', '速限-第1當事者', \n",
     "    '路面狀況-路面鋪裝名稱', '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱',\n",
@@ -92,78 +75,38 @@
     "    '肇事逃逸類別名稱-是否肇逃',\n",
     "    '死亡受傷人數',\n",
     "\n",
+    "    # 大類別\n",
     "    '道路型態大類別名稱', '事故位置大類別名稱',\n",
     "    '車道劃分設施-分向設施大類別名稱',\n",
     "    '事故類型及型態大類別名稱', '當事者區分-類別-大類別名稱-車種', '當事者行動狀態大類別名稱',\n",
-    "    '車輛撞擊部位大類別名稱-其他',\n",
+    "    '車輛撞擊部位大類別名稱-最初', '車輛撞擊部位大類別名稱-其他',\n",
+    "\n",
+    "    # 兩個欄位只有兩個觀察值不同\n",
     "    '肇因研判大類別名稱-主要',\n",
-    "    \n",
-    "    '車輛撞擊部位大類別名稱-最初',\n",
+    "    # '肇因研判大類別名稱-個別',\n",
     "    \n",
     "    '道路型態子類別名稱'\n",
-    "]\n",
-    "\n",
-    "# select_lst = dataA1.columns\n",
-    "\n",
-    "def preprocess(input_data, select_lst):\n",
-    "    # 篩選到第一個順位，因為注重的是單次事故的情況\n",
-    "    main_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
-    "    sample_data = main_data[main_data['發生月份'] < 11]\n",
-    "    selected_data = sample_data[select_lst]\n",
-    "    \n",
-    "    # 將資料分出死亡和受傷，合併到原本的資料後去除多餘的死亡受傷人數\n",
-    "    split_death_injury_data = split_death_injury(selected_data['死亡受傷人數'])\n",
-    "    full_data = pd.concat([selected_data, split_death_injury_data], axis=1)\n",
-    "\n",
-    "    # 補齊缺失值\n",
-    "    full_data[select_lst] = full_data[select_lst].fillna('未紀錄')\n",
-    "\n",
-    "    # 速限範圍\n",
-    "    full_data = full_data[(full_data['速限-第1當事者'] < 200) &\n",
-    "                      (full_data['當事者事故發生時年齡'] < 100) &\n",
-    "                      (full_data['當事者事故發生時年齡'] > 0)]\n",
-    "\n",
-    "    full_data.drop(columns=['死亡受傷人數'], inplace=True)\n",
-    "    \n",
-    "    # 篩選非駕駛人的資料\n",
-    "    full_data = full_data[full_data['當事者行動狀態大類別名稱'] == '人的狀態']\n",
-    "    full_data.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
-    "    # 篩選離群資料(影響MCA的因子得分)\n",
-    "    full_data = full_data[(full_data['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄') &\n",
-    "                   (full_data['行動電話或電腦或其他相類功能裝置名稱'] != '不明')]\n",
-    "    \n",
-    "    return full_data\n",
-    "\n",
-    "full_dataA1 = preprocess(dataA1, select_lst)\n",
-    "full_dataA2 = preprocess(dataA2, select_lst)\n",
-    "# Concat\n",
-    "rbind_data = pd.concat([full_dataA1, full_dataA2], axis=0, ignore_index=True)\n",
-    "rbind_data.drop(columns=['發生月份'], inplace=True)\n",
-    "\n",
-    "# 處理年齡和速限\n",
-    "rbind_data = process_age_speed(rbind_data)\n",
-    "death = rbind_data['死亡']\n",
-    "rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
-    "# 唯一值處理\n",
-    "columns_to_drop = []\n",
-    "for column in rbind_data.columns:\n",
-    "    if rbind_data[column].nunique() == 1:  # 檢查唯一值數量是否等於 1\n",
-    "        columns_to_drop.append(column)\n",
-    "# 去掉唯一值\n",
-    "rbind_data.drop(columns=columns_to_drop, inplace=True)\n",
-    "\n",
-    "dummy_data = pd.get_dummies(rbind_data)\n",
-    "print(dummy_data.shape)\n",
-    "mapper_numpy = dummy_data.to_numpy()\n",
-    "\n",
-    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
+    "]"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['行動電話或電腦或其他相類功能裝置名稱', '當事者區分-類別-大類別名稱-車種', '車輛撞擊部位大類別名稱-最初']\n",
+      "dummy_data: (3143, 128)\n"
+     ]
+    }
+   ],
    "source": [
-    "篩選掉未紀錄資料以及分類人的狀態以及車的狀態"
+    "full_dataA1 = preprocess(dataA1, target='行人', lst=select_lst)\n",
+    "full_dataA2 = preprocess(dataA2, target='行人', lst=select_lst)\n",
+    "mapper_numpy, rbind_data, dummy_data, death = process_other(full_dataA1, full_dataA2, downsample=False)"
    ]
   },
   {
@@ -171,81 +114,6 @@
    "metadata": {},
    "source": [
     "由於人的狀態資料量已經很少，所以不進行下採樣"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Kmode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from kmodes.kmodes import KModes\n",
-    "\n",
-    "data_for_kmode = rbind_data.drop(['死亡', '受傷', 'color_for_plot'], axis=1)\n",
-    "\n",
-    "print(data_for_kmode.columns)\n",
-    "\n",
-    "cost = []\n",
-    "all_results = {}\n",
-    "K = range(1, 10)\n",
-    "\n",
-    "for k in K:\n",
-    "    \n",
-    "    km = KModes(\n",
-    "    n_clusters=k,\n",
-    "    init='Huang',\n",
-    "    verbose=1,\n",
-    "    random_state=42,\n",
-    "    n_jobs=5\n",
-    "    )\n",
-    "\n",
-    "    labels = km.fit_predict(data_for_kmode)\n",
-    "    cost.append(km.cost_)\n",
-    "    all_results[k] = {\n",
-    "        'cost': km.cost_,\n",
-    "        'labels': labels,\n",
-    "        'centroids': km.cluster_centroids_\n",
-    "    }\n",
-    "\n",
-    "optimal_k = K[cost.index(min(cost))]\n",
-    "optimal_result = all_results[optimal_k]\n",
-    "\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "plt.plot(K, cost, marker='o')\n",
-    "plt.xlabel('Number of Clusters (k)')\n",
-    "plt.ylabel('Cost')\n",
-    "plt.title('Elbow Method for Optimal k')\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "# pd.Series(all_results[4]['labels']).value_counts()\n",
-    "# rbind_data['Cluster'] = all_results[4]['labels']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rbind_data['Cluster'] = all_results[2]['labels']"
    ]
   },
   {
@@ -327,8 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "overlap = 5\n",
-    "interval = 10\n",
+    "overlap = 3\n",
+    "interval = 7\n",
     "detailed_results = []\n",
     "silhouette_for_intervals = []\n",
     "\n",
@@ -360,17 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = './Gridsearch/Component12Pass/results_o5i10.pkl'\n",
+    "output_file = './Gridsearch/Component12Pass/results_o3i7.pkl'\n",
     "\n",
-    "with open(output_file, 'rb') as f:\n",
-    "    detailed_results_df = pickle.load(f)\n",
+    "# with open(output_file, 'rb') as f:\n",
+    "#     detailed_results_df = pickle.load(f)\n",
     "    \n",
-    "# with open(output_file, 'wb') as f:\n",
-    "#     pickle.dump(detailed_results_df, f)"
+    "with open(output_file, 'wb') as f:\n",
+    "    pickle.dump(detailed_results_df, f)"
    ]
   },
   {
@@ -402,6 +270,7 @@
    "outputs": [],
    "source": [
     "choose = '顯著特徵'\n",
+    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=87, iterations=100, dim=2,\n",
     "                                range_lst=[-0.25, 0.175, 0.25, -0.25])\n",
@@ -421,11 +290,11 @@
     "rbind_data['死亡'] = death\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=87, iterations=100, dim=2,\n",
-    "                                range_lst=[-0.25, 0.175, 0.25, -0.25])\n",
+    "                                range_lst=[-0.125, 0.125, 0.25, -0.25])\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
     "full_info = mapper_plotter.extract_data()\n",
     "mapper_plotter.map_colors(choose, size=0, threshold=0)\n",
-    "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=100000)"
+    "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=100000, minimum_lst=[-0.05, 0.05])"
    ]
   },
   {
@@ -443,8 +312,8 @@
    "source": [
     "from shapely.geometry import Point, Polygon\n",
     "\n",
-    "rectangle1 = Polygon([(-0.0691, -0.15), (-0.3, -0.15), (-0.3, 0.2), (-0.0691, 0.2)])\n",
-    "rectangle2 = Polygon([(-0.0691, -0.2), (-0.0691, 0.2), (0.2, 0.2), (0.2, -0.2)])\n",
+    "rectangle1 = Polygon([(-0.0333, -0.15), (-0.2, -0.15), (-0.2, 0.1), (-0.0333, 0.1)])\n",
+    "rectangle2 = Polygon([(-0.0333, -0.2), (-0.0333, 0.1), (0.2, 0.1), (0.2, -0.2)])\n",
     "\n",
     "# 限制會導致full_info的資料量減少\n",
     "range_lst=[-0.25, 0.25, 0.25, -0.25]\n",
@@ -492,15 +361,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3096\n",
-      "3096\n"
+      "3143\n",
+      "3143\n"
      ]
     }
    ],
@@ -547,24 +416,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    565\n",
-      "1     13\n",
+      "0    529\n",
+      "1     11\n",
       "Name: 死亡, dtype: int64\n",
-      "0    2213\n",
-      "1      31\n",
+      "0    2373\n",
+      "1      32\n",
       "2       1\n",
       "Name: 死亡, dtype: int64\n",
-      "0    182\n",
-      "1     12\n",
+      "0    163\n",
+      "1     13\n",
       "Name: 死亡, dtype: int64\n",
-      "0    78\n",
+      "0    20\n",
       "1     1\n",
       "Name: 死亡, dtype: int64\n"
      ]
@@ -579,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
