--- a/Version4/Motor.ipynb
+++ b/Version4/Motor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,7 @@
     "from utils.models import *\n",
     "from utils.utils_v3 import *\n",
     "from utils.plots import *\n",
+    "from utils.preprocess import preprocess, process_other, get_unique_ids\n",
     "\n",
     "try:\n",
     "    myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,197 +86,38 @@
     "    '肇因研判大類別名稱-主要',\n",
     "    # '肇因研判大類別名稱-個別',\n",
     "    \n",
-    "    # 篩選駕駛人的資料\n",
     "    '道路型態子類別名稱'\n",
-    "]\n",
-    "# select_lst = dataA1.columns\n",
-    "\n",
-    "def preprocess(input_data, select_lst):\n",
-    "    # 篩選到第一個順位，因為注重的是單次事故的情況\n",
-    "    main_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
-    "    sample_data = main_data[main_data['發生月份'] < 11]\n",
-    "    selected_data = sample_data[select_lst]\n",
-    "    \n",
-    "    # 將資料分出死亡和受傷，合併到原本的資料後去除多餘的死亡受傷人數\n",
-    "    split_death_injury_data = split_death_injury(selected_data['死亡受傷人數'])\n",
-    "    full_data = pd.concat([selected_data, split_death_injury_data], axis=1)\n",
-    "\n",
-    "    # 補齊缺失值\n",
-    "    full_data[select_lst] = full_data[select_lst].fillna('未紀錄')\n",
-    "\n",
-    "    # 速限範圍\n",
-    "    full_data = full_data[(full_data['速限-第1當事者'] < 200) &\n",
-    "                      (full_data['當事者事故發生時年齡'] < 100) &\n",
-    "                      (full_data['當事者事故發生時年齡'] > 0)]\n",
-    "\n",
-    "    full_data.drop(columns=['死亡受傷人數'], inplace=True)\n",
-    "    \n",
-    "    # 篩選汽車的資料\n",
-    "    full_data = full_data[full_data['車輛撞擊部位大類別名稱-最初'] == '機車與自行車']\n",
-    "    # 篩選離群資料(影響MCA的因子得分)\n",
-    "    full_data = full_data[(full_data['肇因研判大類別名稱-主要'] != '非駕駛者') &\n",
-    "                  (full_data['肇因研判大類別名稱-主要'] != '無(非車輛駕駛人因素)') &\n",
-    "                  (full_data['肇因研判大類別名稱-主要'] != '無(車輛駕駛者因素)') &\n",
-    "                  (full_data['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄') &\n",
-    "                    (full_data['車輛撞擊部位大類別名稱-最初'] != '未紀錄')&\n",
-    "                    (full_data['道路型態大類別名稱'] != '平交道') &\n",
-    "                    (full_data['道路型態子類別名稱'] != '廣場') &\n",
-    "                    (full_data['道路型態子類別名稱'] != '其他') &\n",
-    "                    (full_data['道路型態子類別名稱'] != '圓環廣場')]\n",
-    "    \n",
-    "    full_data.drop(columns=['車輛撞擊部位大類別名稱-最初'], inplace=True)\n",
-    "    \n",
-    "    return full_data\n",
-    "\n",
-    "full_dataA1 = preprocess(dataA1, select_lst)\n",
-    "full_dataA2 = preprocess(dataA2, select_lst)\n",
-    "\n",
-    "# full_dataA2['道路型態子類別名稱'].value_counts()"
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46 11511\n",
-      "45 11260\n",
-      "47 11761\n",
-      "43 10760\n",
-      "36 9008\n",
-      "43 10760\n",
-      "59 14764\n",
-      "53 13262\n",
-      "40 10009\n",
-      "45 11260\n",
-      "dummy_data: (165818, 142)\n"
+      "43 10898\n",
+      "44 11152\n",
+      "42 10645\n",
+      "37 9377\n",
+      "33 8364\n",
+      "43 10898\n",
+      "54 13686\n",
+      "46 11659\n",
+      "39 9884\n",
+      "42 10645\n",
+      "[]\n",
+      "dummy_data: (107631, 146)\n"
      ]
     }
    ],
    "source": [
-    "# 下採樣資料\n",
-    "sampling_ratio = 0.7  # 下採樣比例，根據A1 和 A2 原始數據量比例調整\n",
-    "total_ratio = len(full_dataA1) / len(full_dataA2) # 保留 A1/A2 的比例\n",
-    "downsampled_A1, downsampled_A2 = downsample_by_month_simple(full_dataA1, full_dataA2, sampling_ratio, total_ratio)\n",
-    "\n",
-    "# Concat\n",
-    "rbind_data = pd.concat([full_dataA1, full_dataA2], axis=0, ignore_index=True)\n",
-    "rbind_data.drop(columns=['發生月份'], inplace=True)\n",
-    "# 處理年齡和速限\n",
-    "rbind_data = process_age_speed(rbind_data)\n",
-    "death = rbind_data['死亡']\n",
-    "rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
-    "# 唯一值處理\n",
-    "columns_to_drop = []\n",
-    "for column in rbind_data.columns:\n",
-    "    if rbind_data[column].nunique() == 1:  # 檢查唯一值數量是否等於 1\n",
-    "        columns_to_drop.append(column)\n",
-    "rbind_data.drop(columns=columns_to_drop, inplace=True)\n",
-    "# Dummy\n",
-    "rbind_data[\"速限-第1當事者\"] = rbind_data[\"速限-第1當事者\"].astype(str)\n",
-    "dummy_data = pd.get_dummies(rbind_data)\n",
-    "print('dummy_data:', dummy_data.shape)\n",
-    "mapper_numpy = dummy_data.to_numpy()\n",
-    "\n",
-    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "篩選掉未紀錄資料以及分類人的狀態以及車的狀態"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Kmode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from kmodes.kmodes import KModes\n",
-    "\n",
-    "data_for_kmode = rbind_data.drop(['死亡', '受傷', 'color_for_plot'], axis=1)\n",
-    "\n",
-    "cost = []\n",
-    "all_results = {}\n",
-    "K = range(1, 5)\n",
-    "\n",
-    "for k in K:\n",
-    "\n",
-    "    km = KModes(\n",
-    "    n_clusters=k, \n",
-    "    init='Huang',\n",
-    "    verbose=1,\n",
-    "    random_state=42,\n",
-    "    n_jobs=10\n",
-    "    )\n",
-    "\n",
-    "    labels = km.fit_predict(data_for_kmode)\n",
-    "    cost.append(km.cost_)\n",
-    "    all_results[k] = {\n",
-    "        'cost': km.cost_,\n",
-    "        'labels': labels,\n",
-    "        'centroids': km.cluster_centroids_\n",
-    "    }\n",
-    "\n",
-    "optimal_k = K[cost.index(min(cost))]\n",
-    "optimal_result = all_results[optimal_k]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with open('Version3/Data/MotorData/kmode_result.pickle', 'wb') as f:\n",
-    "#     pickle.dump(all_results, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8, 5))\n",
-    "plt.plot(K, cost, marker='o')\n",
-    "plt.xlabel('Number of Clusters (k)')\n",
-    "plt.ylabel('Cost')\n",
-    "plt.title('Elbow Method for Optimal k')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1    48690\n",
-      "0    46813\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pd.Series(all_results[2]['labels']).value_counts())\n",
-    "rbind_data['Cluster'] = all_results[2]['labels']"
+    "full_dataA1 = preprocess(dataA1, target='機車', lst=select_lst)\n",
+    "full_dataA2 = preprocess(dataA2, target='機車', lst=select_lst)\n",
+    "mapper_numpy, rbind_data, dummy_data, death = process_other(full_dataA1, full_dataA2, downsample=0.6)"
    ]
   },
   {
@@ -293,7 +135,7 @@
    "source": [
     "mca = prince.MCA(\n",
     "    one_hot=False,\n",
-    "    n_components=9,\n",
+    "    n_components=8,\n",
     "    n_iter=30,\n",
     "    copy=True,\n",
     "    check_input=True,\n",
@@ -324,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,15 +227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../Version4/GridSearch/Component9Motor/results_o2i9.pkl', 'rb') as f:\n",
-    "    detailed_results_df = pickle.load(f)\n",
+    "file = '../Version4/GridSearch/Component8Motor/results_o2i9.pkl'\n",
+    "\n",
+    "# with open(file, 'rb') as f:\n",
+    "#     detailed_results_df = pickle.load(f)\n",
     "    \n",
-    "# with open('../Version4/GridSearch/Component9Motor/results_o2i9.pkl', 'wb') as f:\n",
-    "#     pickle.dump(detailed_results_df, f)"
+    "with open(file, 'wb') as f:\n",
+    "    pickle.dump(detailed_results_df, f)"
    ]
   },
   {
@@ -409,16 +253,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '顯著特徵'\n",
+    "choose = '死亡'\n",
+    "rbind_data['死亡'] = death\n",
     "\n",
-    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=1, iterations=100, dim=3,\n",
-    "                                   range_lst=[-0.1, 0.1, 0.1, -0.1])\n",
+    "for i in [15]:\n",
+    "    print(f'Seed: {i}')\n",
+    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100,\n",
+    "                                   range_lst=[-0.06, 0.05, 0.06, -0.06], dim=3)\n",
+    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
+    "    full_info = mapper_plotter.extract_data(rz=-30, ry=30)\n",
+    "    mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
+    "    mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.025, 0.02])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for choose in select_lst:\n",
+    "    print(choose)\n",
+    "    try:\n",
+    "        mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100,\n",
+    "                                        range_lst=[-0.05, 0.05, 0.06, -0.06], dim=3)\n",
+    "        mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
+    "        full_info = mapper_plotter.extract_data(rz=-30, ry=30)\n",
+    "        mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
+    "        mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "choose = '顯著特徵'\n",
+    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
+    "\n",
+    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100,\n",
+    "                                range_lst=[-0.05, 0.05, 0.06, -0.06], dim=3)\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "full_info = mapper_plotter.extract_data()\n",
-    "full_info[['x', 'y', 'z']] = rotate_y(full_info[['x', 'y', 'z']], 50)\n",
-    "full_info[['x', 'y', 'z']] = rotate_x(full_info[['x', 'y', 'z']], -35)\n",
-    "full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], 150)\n",
-    "mapper_plotter.map_colors(choose, size=15, threshold=0)\n",
+    "full_info = mapper_plotter.extract_data(rz=-30, ry=30)\n",
+    "mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
     "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
    ]
   },
@@ -428,20 +309,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '死亡'\n",
-    "rbind_data['死亡'] = death\n",
+    "choose = '天候名稱'\n",
     "\n",
-    "for i in [1]:\n",
+    "for i in [15]:\n",
     "    print(f'Seed: {i}')\n",
-    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100, dim=3,\n",
-    "                                   range_lst=[-0.1, 0.1, 0.1, -0.1])\n",
-    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
-    "    full_info = mapper_plotter.extract_data()\n",
-    "    full_info[['x', 'y', 'z']] = rotate_y(full_info[['x', 'y', 'z']], 50)\n",
-    "    full_info[['x', 'y', 'z']] = rotate_x(full_info[['x', 'y', 'z']], -35)\n",
-    "    full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], 150)\n",
-    "    mapper_plotter.map_colors(choose, size=15, threshold=0)\n",
-    "    mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.05, 0.05])"
+    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100,\n",
+    "                                   range_lst=[-0.05, 0.05, 0.06, -0.06], dim=3)\n",
+    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
+    "    full_info = mapper_plotter.extract_data(rz=-30, ry=30)\n",
+    "    mapper_plotter.map_colors(choose, size=15, threshold=5)\n",
+    "    mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
    ]
   },
   {
@@ -459,14 +336,14 @@
    "source": [
     "from shapely.geometry import Point, Polygon\n",
     "\n",
-    "rectangle1 = Polygon([(-0.0014, -0.06), (-0.08, -0.06),(-0.08, 0.06), (-0.0014, 0.06)])\n",
-    "rectangle2 = Polygon([(-0.0014, -0.06), (-0.0014, 0.065), (0.1, 0.065), (0.1, -0.06)])\n",
+    "rectangle1 = Polygon([(-0.0126, -0.075), (-0.1, -0.075),(-0.1, 0.075), (-0.0126, 0.075)])\n",
+    "rectangle2 = Polygon([(-0.0126, -0.075), (-0.0126, 0.075), (0.1, 0.075), (0.1, -0.075)])\n",
     "\n",
     "filtered_full_info = full_info[(full_info['y'] > -0.1) &\n",
     "                               (full_info['y'] < 0.1) &\n",
     "                               (full_info['x'] > -0.1) &\n",
     "                               (full_info['x'] < 0.1)]\n",
-    "filtered_full_info = filtered_full_info[filtered_full_info['size'] > 15]\n",
+    "filtered_full_info = filtered_full_info[filtered_full_info['size'] > 1]\n",
     "filtered_full_info = full_info\n",
     "\n",
     "# 檢查每個點是否在任意一個區塊內\n",
@@ -508,15 +385,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "165818\n",
-      "165818\n"
+      "107631\n",
+      "107631\n"
      ]
     }
    ],
@@ -563,27 +440,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    98115\n",
-      "1      267\n",
-      "2        1\n",
+      "0    38758\n",
+      "1      230\n",
+      "2        5\n",
       "Name: 死亡, dtype: int64\n",
-      "0    59647\n",
-      "1      352\n",
-      "2        4\n",
+      "0    63094\n",
+      "1      170\n",
       "Name: 死亡, dtype: int64\n",
-      "0    4767\n",
-      "1      29\n",
+      "0    2079\n",
+      "1       9\n",
       "2       1\n",
       "Name: 死亡, dtype: int64\n",
-      "0    2629\n",
-      "1       6\n",
+      "0    3277\n",
+      "1       8\n",
       "Name: 死亡, dtype: int64\n"
      ]
     }
@@ -597,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
